src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_amp_credits.snap
---
source: src/tui/render/detail/mod.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────$2.10 · 02:00 ╮"
"│                 ┏ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ PROVEDORES      ┃ sessão       ███████████████████████████████████░░░░░░░░░░░░░░░   70%  → -    ┃│"
"│ ● Amp     70%   ┃ Free Tier    ███████████████████████████████████░░░░░░░░░░░░░░░   70%  → -    ┃│"
"│                 ┃ Credits      ██████████████████████████████████████████████████  100%  → -    ┃│"
"│ MAIS            ┃ TOKENS/HORA · 24H                                                    escala √ ┃│"
"│   Histórico     ┃                                                                               ┃│"
"│   Login         ┃                                                                               ┃│"
"│   Config        ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃ sem uso de tokens no período                                                  ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃ hoje 0 tok · cr $4.19    7 dias 0 tok · -                                     ┃│"
"│                 ┃      esc voltar     r atualizar     g login     h histórico     ? ajuda       ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────── ? ajuda ─────────────────────────────────────────────╯"
