src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_chart_absorbs_extra_height_no_blank_gap.snap
---
source: src/tui/render/detail/mod.rs
expression: buffer_to_string(&buf)
---
┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ sessão       █████████████████████████████████████████████████░░░░░░   89%  → 0h 39m · 02:39     ┃
┃ semana       █████████████████████████████████████████████████████▍░   97%  → 1d 20h · sex 22:59 ┃
┃ Opus         █████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░   60%  → ?  $1.40           ┃
┃ Fable        █████████████████████████████████████████████████████▍░   97%  → 1d 20h · sex 22:59 ┃
┃ TOKENS/HORA · 24H                                                                       escala √ ┃
┃ 900k┤                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃ 225k┤                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                                  ██                        ┃
┃     │                                                      ▅▅          ██                        ┃
┃     │                                                      ██          ██                        ┃
┃     │                                          ▃▃          ██          ██                        ┃
┃     │                                          ██          ██          ██                        ┃
┃     │                                          ██          ██          ██                        ┃
┃     │                                          ██          ██          ██                        ┃
┃     │                                          ██          ██          ██                        ┃
┃     │                                          ██          ██          ██                        ┃
┃    0┴────────────────────────────────────────────────────────────────────────                    ┃
┃      03h      06h      09h      12h      15h      18h      21h      00h                          ┃
┃  ● Opus 4.8 1,0M  ● Sonnet 4.6 50k                                                               ┃
┃                                                                                                  ┃
┃ MODELOS HOJE                                                                                     ┃
┃ Opus 4.8     █████████████████████████████████████████████████████████████████     900k     $1.40┃
┃ Sonnet 4.6   █████████████████████▋░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░     300k         —┃
┃ EXTRA USAGE  ██████████████████████████████████████████████████████▍░░░░░░░  $12.34 de $100.00   ┃
┃ hoje 1,2M tok · $2.10    7 dias 1,1M tok · $5.15                                                 ┃
┃                esc voltar     r atualizar     g login     h histórico     ? ajuda                ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
