src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_codex_logged_out.snap
---
source: src/tui/render/detail.rs
assertion_line: 1335
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│                 ┏ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ PROVEDORES      ┃                                                                               ┃│"
"│ ● Codex    –    ┃ Codex — sem sessão                                                            ┃│"
"│                 ┃                                                                               ┃│"
"│ MAIS            ┃ Nenhuma credencial válida encontrada para este provider.                      ┃│"
"│   Histórico     ┃ Pressione [g] ou clique no chip "login" abaixo para autenticar.               ┃│"
"│   Login         ┃                                                                               ┃│"
"│   Config        ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
