src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_collapse_short_terminal.snap
---
source: src/tui/render/detail.rs
assertion_line: 1288
expression: text
---
╭ agent-bar ─────────────────────────────────────────────────────────────────────────$2.10 · 02:00 ╮
│                 ┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│
│ PROVEDORES      ┃ sessão       ████████████████████████████████████████████▌░░░░░   89%  → 02:39┃│
│ ◆ Claude  89%   ┃ semana       ████████████████████████████████████████████████▌░   97%  → 22:59┃│
│                 ┃ Opus         ██████████████████████████████░░░░░░░░░░░░░░░░░░░░   60%  → -    ┃│
│ MAIS            ┃ Fable        ████████████████████████████████████████████████▌░   97%  → 22:59┃│
│   Histórico     ┃ TOKENS/HORA · 24H                                                    escala √ ┃│
│   Login         ┃ 900k┤                                                                  ██     ┃│
│   Config        ┃     │                                                                  ██     ┃│
│                 ┃ 225k┤                                                                  ██     ┃│
│                 ┃     │                                          ▁▁          ▅▅          ██     ┃│
│                 ┃     │                                          ██          ██          ██     ┃│
│                 ┃    0┴──────────────────────────────────────────────────────────────────────── ┃│
│                 ┃      03h      06h      09h      12h      15h      18h      21h      00h       ┃│
│                 ┃  ● Opus 4.8 1,0M  ● Sonnet 4.6 50k                                            ┃│
│                 ┃ 2 modelos hoje · $1.40  …                                                     ┃│
│                 ┃ hoje 1.2M tok · $2.10    7 dias 1.1M tok · $5.15                              ┃│
│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│
│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
