src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_extra_usage_disabled.snap
---
source: src/tui/render/detail.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│ VISÃO           ┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ ▸ Geral         ┃ sessão       █████████████████████████████████████████████▒▒▒▒▒   89%  → 02:39┃│"
"│                 ┃ semana       █████████████████████████████████████████████████▒   97%  → 22:59┃│"
"│ PROVIDERS       ┃ Opus         ██████████████████████████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   60%  → -    ┃│"
"│ ◆ Claude  89%   ┃ Fable        █████████████████████████████████████████████████▒   97%  → 22:59┃│"
"│                 ┃                                                                               ┃│"
"│ MAIS            ┃ tokens/h  sem uso nas últimas 24h                                             ┃│"
"│   Histórico     ┃ extra usage  desativado                                                       ┃│"
"│   Login         ┃                                                                               ┃│"
"│   Waybar        ┃ hoje 0 tok · -    7 dias 0 tok · -                                            ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
