src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_extra_usage_no_limit.snap
---
source: src/tui/render/detail.rs
assertion_line: 1424
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│                 ┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ PROVEDORES      ┃ sessão       ████████████████████████████████████████████▌░░░░░   89%  → 02:39┃│"
"│ ◆ Claude  89%   ┃ semana       ████████████████████████████████████████████████▌░   97%  → 22:59┃│"
"│                 ┃ Opus         ██████████████████████████████░░░░░░░░░░░░░░░░░░░░   60%  → -    ┃│"
"│ MAIS            ┃ Fable        ████████████████████████████████████████████████▌░   97%  → 22:59┃│"
"│   Histórico     ┃ TOKENS/HORA · 24H                                                    escala √ ┃│"
"│   Login         ┃ coletando histórico…                                                          ┃│"
"│   Waybar        ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃ extra usage  $12.34 usado · sem limite                                        ┃│"
"│                 ┃ hoje coletando…    7 dias coletando…                                          ┃│"
"│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
