src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_narrow_80.snap
---
source: src/tui/render/detail/mod.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────$2.10 · 02:00 ╮"
"│                 ┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ PROVEDORES      ┃ sessão       ██████████████▎░   89%  → 0h 39m · 02:39     ┃│"
"│ ◆ Claude  89%   ┃ semana       ███████████████▌   97%  → 1d 20h · sex 22:59 ┃│"
"│                 ┃ Opus         █████████▋░░░░░░   60%  → ?  $1.40           ┃│"
"│ MAIS            ┃ Fable        ███████████████▌   97%  → 1d 20h · sex 22:59 ┃│"
"│   Histórico     ┃ TOKENS/HORA · 24H                                escala √ ┃│"
"│   Login         ┃ 900k┤                                        █            ┃│"
"│   Config        ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃ 225k┤                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃     │                                        █            ┃│"
"│                 ┃    0┴────────────────────────────────────────────────     ┃│"
"│                 ┃      03h   06h   09h   12h   15h   18h   21h   00h        ┃│"
"│                 ┃  ● Opus 4.8 900k                                          ┃│"
"│                 ┃                                                           ┃│"
"│                 ┃ MODELOS HOJE                                              ┃│"
"│                 ┃ Opus 4.8     ██████████████████████████     900k     $1.40┃│"
"│                 ┃ Sonnet 4.6   ████████▋░░░░░░░░░░░░░░░░░     300k         —┃│"
"│                 ┃ EXTRA USAGE  ████████████████████▏░░  $12.34 de $100.00   ┃│"
"│                 ┃ hoje 1,2M tok · $2.10    7 dias 900k tok · $4.50          ┃│"
"│                 ┃ esc voltar     r atualizar     g login     h histórico    ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰────────────────────────────────── ? ajuda ───────────────────────────────────╯"
