src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_provider_error_shows_icon_and_message.snap
---
source: src/tui/render/detail.rs
assertion_line: 1454
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────────────────────────────────────────────- ╮"
"│                 ┏ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ PROVEDORES      ┃                                                                               ┃│"
"│ ● Codex    –    ┃ ! Erro ao carregar dados                                                      ┃│"
"│                 ┃                                                                               ┃│"
"│ MAIS            ┃ Failed to fetch Codex usage                                                   ┃│"
"│   Histórico     ┃                                                                               ┃│"
"│   Login         ┃                                                                               ┃│"
"│   Config        ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃                                                                               ┃│"
"│                 ┃            esc voltar     r atualizar     g login     h histórico             ┃│"
"│                 ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
