src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_renders_wide_160.snap
---
source: src/tui/render/detail.rs
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                                                                                                                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━━━┓┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃◆ Claude  26%  ┃┃ 5h  ███████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   26%  → 23:00 ┃"
"┃               ┃┃ wk  ██████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   12%  → 00:00 ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃ Models                                                                                                                                      ┃"
"┃               ┃┃   Opus      █████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   41%  $1.40                                   ┃"
"┃               ┃┃   Sonnet    ████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   20%  -                                       ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃ tokens/h ▁▂▃▅▇▆▄▂▁          ~$2.10 hoje                                                                                                     ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┃               ┃┃                                                                                                                                             ┃"
"┗━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" ↑↓ provider · Esc volta · ←→ aba · [r]efresh · [?] ajuda                                                                                                       "
