src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_renders_with_real_cost.snap
---
source: src/tui/render/detail.rs
expression: terminal.backend()
---
"╭ agent-bar ─────────────────────────────────────────────$2.10 ╮"
"│   ┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│"
"│ ▸ ┃ 5h  █████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   26%  → 23:00 ┃│"
"│   ┃ wk  ████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   12%  → 00:00 ┃│"
"│   ┃                                                         ┃│"
"│ ◆ ┃ Models                                                  ┃│"
"│   ┃   Opus      ██████████▒▒▒▒▒▒▒▒▒▒▒▒▒▒   41%  $1.40       ┃│"
"│   ┃   Sonnet    █████▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒   20%  -           ┃│"
"│ H ┃                                                         ┃│"
"│ L ┃ tokens/h ▁▂▃▅▇▆▄▂▁          ~$2.10 hoje                 ┃│"
"│ W ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┃                                                         ┃│"
"│   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│"
"╰──────────────────────────────────────────────────────────────╯"
